[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Battle.gd" type="Script" id=2]
[ext_resource path="res://themes/button.tres" type="Theme" id=3]

[node name="Battle" type="Node"]
script = ExtResource( 2 )

[node name="Enemy" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AttackButton" type="Button" parent="CanvasLayer"]
margin_left = 362.0
margin_top = 177.0
margin_right = 418.0
margin_bottom = 202.0
theme = ExtResource( 3 )
text = "Attack"

[node name="BattleOver" type="Timer" parent="."]
one_shot = true

[connection signal="death" from="Enemy" to="." method="_on_Enemy_death"]
[connection signal="pressed" from="CanvasLayer/AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="timeout" from="BattleOver" to="." method="_on_BattleOver_timeout"]
